[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/Logo.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/ButtonQuit.png" type="Texture" id=2]
[ext_resource path="res://sprites/ButtonQuitPressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/ButtonRestartPressed.png" type="Texture" id=4]
[ext_resource path="res://sprites/ButtonResume.png" type="Texture" id=5]
[ext_resource path="res://sprites/ButtonRestart.png" type="Texture" id=6]
[ext_resource path="res://sprites/ButtonResumePressed.png" type="Texture" id=7]
[ext_resource path="res://objects/PauseMenu.gd" type="Script" id=8]
[ext_resource path="res://src/KarmaticArcade.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://sprites/BreadGrabber.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
HSlider/icons/grabber = ExtResource( 10 )
HSlider/icons/grabber_disabled = ExtResource( 10 )
HSlider/icons/grabber_highlight = ExtResource( 10 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.396078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 130.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="CenterContainer" instance=ExtResource( 1 )]
margin_left = 192.0
margin_top = 27.0
margin_right = 448.0
margin_bottom = 103.0

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 130.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 224.0
margin_top = 7.0
margin_right = 416.0
margin_bottom = 223.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="CenterContainer2/VBoxContainer"]
margin_right = 192.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 7 )

[node name="Restart" type="TextureButton" parent="CenterContainer2/VBoxContainer"]
margin_top = 76.0
margin_right = 192.0
margin_bottom = 140.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 4 )

[node name="Quit" type="TextureButton" parent="CenterContainer2/VBoxContainer"]
margin_top = 152.0
margin_right = 192.0
margin_bottom = 216.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect2"]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect2/CenterContainer"]
margin_left = 320.0
margin_top = 139.0
margin_right = 320.0
margin_bottom = 221.0
theme = SubResource( 2 )

[connection signal="pressed" from="CenterContainer2/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
